# agrg-sh-d-util

./: Cargo.toml  build.rs
backend/: Cargo.toml
backend/src/: main.rs
src/: logo.rs  main.rs  serial_utils.rs  styles.rs
src/core/: cards.rs  error.rs  journal.rs  mod.rs  settings.rs
src/serial/: mod.rs  port.rs
src/utils/: cards.rs  journal.rs  mock.rs  mod.rs  settings.rs
src/www/: index.html
