[package]
name = "agrg-sh-d-util"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4.3"
iced = { version = "0.12.1", features = ["tokio"] }  # Valid features for 0.12
tokio = { version = "1.37.0", features = ["time"] }
serialport = "4.7.0"
chrono = "0.4"
rfd = "0.12"
